--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "vica"
 version = "0.0.0"
 
 dependencies=[
-    "nerfstudio",
+    "nerfstudio==1.0.0",
     "clip @ git+https://github.com/openai/CLIP.git",
     "diffusers>=0.14.0.dev0",
     "transformers>=4.26.1",
